[tool.poetry]
name = "trial_balloon"
version = "0.1.0"
description = "A tool for easily generating sample Democracy Club data"
authors = ["Brendan McCollam <brendan@mccoll.am>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.9.1"
email-validator = "^1.2.1"
geojson-pydantic = "^0.4.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
responses = "^0.21.0"
requests = "^2.28.1"
lavender = "^0.2.1"
isort = "^5.10.1"
autoflake = "^1.4"
types-requests = "^2.28.7"
flake8 = "^5.0.4"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
